--- a/app/src/main/res/layout/fragment_luck.xml
+++ b/app/src/main/res/layout/fragment_luck.xml
@@ -47,7 +47,7 @@
         android:id="@+id/clPrediction"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
